--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
+    "json2csv": "6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.8.0"
   },
